test_translator/tests/data/checkpoint_2/core/fail/72_isclose_both_tols/solution.py
def compute():
    return 1.02  # Outside both tolerances
